Version 3: Implementacion de pruebas unitarias